--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Inter:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Jogo em JS</title>
+    <title>Jogo JS</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <div class="container__conteudo">
             <div class="container__informacoes">
                 <div class="container__texto">
-                    <h1>Descubra o <span class="container__texto-azul">numero secreto</span></h1>
+                    <h1>Descubra o <span class="container__texto-azul">número secreto</span></h1>
                     <p class="texto__paragrafo">Escolha um número entre 1 a 40</p>
 
                 </div>
@@ -30,7 +30,9 @@
                         jogo</button>
                 </div>
             </div>
-            <img src="./img/ia.png" alt="Uma pessoa olhando para a esquerda" class="container__imagem-pessoa" />
+            <img src="./img/ia.png"
+                alt="Uma pessoa olhando para a esquerda" 
+                class="container__imagem-pessoa" />
         </div>
     </div>
 
